--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,18 @@ textarea:focus,
 input:focus {
   color: white;
 }
+
+.carousel {
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 900px;
+}
+
+.carousel-inner {
+  white-space: nowrap;
+}
+
+.carousel-item {
+  display: inline-block;
+  width: 100%;
+}
